syntax = "proto3";

package protocol.v1;

option java_multiple_files = true;
option java_outer_classname = "GameProto";
option java_package = "net.hardnorth.protocol";

message HelloRequest {}

message HelloResponse {
  string message = 1;
}

service GameService {
  rpc Hello(HelloRequest) returns (HelloResponse);
}
